--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "learn how to call an external api using node js.",
   "main": "app.js",
   "scripts": {
-    "test": "node app.js"
+    "start": "node app.js"
   },
   "keywords": [
     "nodejs",
